; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet6/extr_icmp6.c_icmp6_redirect_diag.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet6/extr_icmp6.c_icmp6_redirect_diag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.in6_addr = type { i32 }

@icmp6_redirect_diag.buf = internal global [1024 x i8] zeroinitializer, align 16
@.str = private unnamed_addr constant [23 x i8] c"(src=%s dst=%s tgt=%s)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.in6_addr*, %struct.in6_addr*, %struct.in6_addr*)* @icmp6_redirect_diag to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @icmp6_redirect_diag(%struct.in6_addr* %0, %struct.in6_addr* %1, %struct.in6_addr* %2) #0 {
  %4 = alloca %struct.in6_addr*, align 8
  %5 = alloca %struct.in6_addr*, align 8
  %6 = alloca %struct.in6_addr*, align 8
  store %struct.in6_addr* %0, %struct.in6_addr** %4, align 8
  store %struct.in6_addr* %1, %struct.in6_addr** %5, align 8
  store %struct.in6_addr* %2, %struct.in6_addr** %6, align 8
  %7 = load %struct.in6_addr*, %struct.in6_addr** %4, align 8
  %8 = call i8* @ip6_sprintf(%struct.in6_addr* %7)
  %9 = load %struct.in6_addr*, %struct.in6_addr** %5, align 8
  %10 = call i8* @ip6_sprintf(%struct.in6_addr* %9)
  %11 = load %struct.in6_addr*, %struct.in6_addr** %6, align 8
  %12 = call i8* @ip6_sprintf(%struct.in6_addr* %11)
  %13 = call i32 @snprintf(i8* getelementptr inbounds ([1024 x i8], [1024 x i8]* @icmp6_redirect_diag.buf, i64 0, i64 0), i32 1024, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i8* %8, i8* %10, i8* %12)
  ret i8* getelementptr inbounds ([1024 x i8], [1024 x i8]* @icmp6_redirect_diag.buf, i64 0, i64 0)
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*, i8*, i8*) #1

declare dso_local i8* @ip6_sprintf(%struct.in6_addr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
